# Employee-Self-Service-Astratech

./: CMakeLists.txt  Medical Raw  main.c
Data/: StructMaster.h  StructTransaksi.h
Data/Laporan/: Laporan Perizinan.h  RekapTransaksiMedical.h
Data/Master/: Alasan.h  Department.h  Medical.h  MenuMakanan.h  Pengumuman.h  Role.h  User.h
Data/Transaksi/: Absensi.h  AbsensiMakan.h  Pengaduan.h  Perizinan.h  TransaksiMedical.h
Pages/: Dashboard.h  LandingPage.h  Menu.h  MenuMaster.h  SplashScreen.h
SupportFunction/: Colors.h  IOVal.h  Time.h  Transisi.h  pgUpPgDn.h  screen.h
UI/: UIPages.h  box.h
